2.10.2 (09-04-2024)
- Bug fix: Correcting encoding issues [#UL-REIT-3800]

2.10.1 (02-04-2024)
- Bug fix: Correcting issue with new changes in layout [#qubIT-Fenix-5122]

2.10.0 (02-04-2024)
- New feature: Starts reporting app mode and having dump date on QUALITY and DEVELOPMENT environments [#qubIT-Omnis-5460]
- Improvement: Upgrades to java 11 [#qubIT-Omnis-4753]
- Improvement: Upgrades maven-plugin-plugin to 3.10.2 [#qubIT-Omnis-4751]

2.9.5 (23-02-2023)
- Improvement: update banner's footer

2.9.4 (18-01-2023)
- Improvement: update ISCSP theme

2.9.3 (18-01-2023)
- Improvement: update ISCSP theme

2.9.2 (18-01-2023)
- Improvement: update ISCSP theme

2.9.1 (19-12-2022)
- Bug fix: Removing layout menu from print to avoid issues with new chrome versions

2.9.0 (12-08-2022)
- New feature: Adds user not found error page

2.8.0 (22-07-2022)
- Improvement: Changes in the Login page regarding SSO

2.7.6 (22-06-2022)
- Improvement: Change FA Theme

2.7.5 (10-08-2021)
- Refactor: Refactored login callback so it doesn't skip post login redirectors

2.7.4 (15-03-2021)
- Improvement: Update ISEG Theme (@brand-primary: #e02020; @body-bg: #fbe8e8)

2.7.3 (14-03-2021)
- Improvement: Update ISEG Theme (#fce8e8)

2.7.2 (14-03-2021)
- Improvement: Update ISEG Theme

2.7.1 (14-03-2021)
2.7.0 (22-02-2021)
- New feature: Allowing language change in login page
- Improvement: Changed presentation of third party logins

2.6.3 (15-12-2020)
2.6.2 (24-11-2020)
- Improvement: Support to check that a certain provider should always be used

2.6.1 (07-10-2020)
- Improvement: Redirecting always to startPage

2.6.0 (01-07-2020)
- New feature: Execution course management layout, without hard-coded functionalities

2.5.0 (08-05-2020)
- Refactor: Changing place where support property is checked

2.4.0 (04-05-2020)
- Improvement: Add login path as parameter

2.3.7 (27-04-2020)
- Bug fix: Fix reload bug in locale change request

2.3.6 (24-04-2020)