@@ -1,299 +1,0 @@
-{% extends "{{school-theme}}/default" %}
-{% block mainContainer %}
-<main class="col-sm-10 col-sm-push-2" role="main">
-	<ol class="breadcrumb">
-	{% for item in functionality.pathFromRoot %}
-		<li><a href="{{contextPath}}{{item.fullPath}}">{{item.title.content}}</a></li>
-	{% endfor %}
-
-		<span class="pull-right">
-			{% for locale in locales %}
-				<a class="locale-changer {% if locale == currentLocale %}active{% endif %}" title="{{locale.displayName}}" onclick="setLang('{{locale}}')">{{locale.language}}</a>
-			{% endfor %}
-		</span>
-	</ol>
-	<div id="main-content-wrapper">
-        {% autoescape false %}
-            {{ body }}
-        {% endautoescape %}
-	</div>
-</main>
-<nav class="col-sm-2 col-sm-pull-10" id="context">
-
-{% if functionality.parent.parent == config.menu %}
-	{% set root = functionality.parent %}
-{% else %}
-	{% set root = functionality.pathFromRoot | first %}
-{% endif %}
-
-{% lazyFor item in root.userMenuStream %}
-	{% if item.path != "_execution-course-functionalities" %}
-		<ul class="nav nav-pills nav-stacked">
-			{% if item.userMenuStream is empty %}
-				<a href="{{contextPath}}{{item.fullPath}}"><li class="navheader"><strong>{{item.title.content}}</strong></li></a>
-			{% else %}
-				<li class="navheader"><strong>{{item.title.content}}</strong></li>
-				{% lazyFor child in item.userMenuStream %}
-					<li><a href="{{contextPath}}{{child.fullPath}}">{{child.title.content}}</a></li>
-				{% endLazyFor %}
-			{% endif %}
-		</ul>
-	{% endif %}
-{% endLazyFor %}
-{% if executionCourse is not empty %}
-<ul class="nav nav-pills nav-stacked nav-group-contextualized-header">
-	<li class="navheader">
-		<strong>{{executionCourse.nameI18N.content}}</strong>
-	</li>
-</ul>
-	<div class="nav-group-contextualized">
-	
-{# STICKY_ITEMS_MENU #}
-		<ul class="nav nav-pills nav-stacked">
-			<li>
-				<!-- NO_CHECKSUM -->
-				<a href="{{executionCourse.siteUrl}}" target="_blank">
-				{{ i18n("resources.ApplicationResources", "link.executionCourseManagement.menu.view.course.page" ) }}
-				</a>
-			</li>
-<!-- 			{% if professorship.permissions.summaries %} -->
-<!-- 			<li> -->
-<!-- 					<a href="{{contextPath}}{{ injectCheckSumInUrl (contextPath, "/teacher/searchECLog.do?method=prepareInit&executionCourseID="+executionCourse.externalId, session ) }}"> -->
-<!-- 					{{ i18n("resources.ApplicationResources", "link.executionCourse.log") }} -->
-<!-- 				</a> -->
-<!-- 			</li> -->
-<!-- 			{% endif %} -->
-		</ul>
-{# /STICKY_ITEMS_MENU #}
-		
-{# COMMUNICATION_MENU #}
-		<ul class="nav nav-pills nav-stacked">
-			<li class="navheader">
-				<strong>{{ i18n("resources.ApplicationResources", "label.executionCourseManagement.menu.communication") }}</strong>
-			</li>
-<!-- 			{% if professorship.permissions.personalization %} -->
-<!-- 				<li> -->
-<!-- 					NO_CHECKSUM -->
-<!-- 					<a href="{{contextPath}}/teacher/{{executionCourse.externalId}}/communication"> -->
-<!-- 					{{ i18n("resources.ApplicationResources", "label.executionCourseManagement.menu.communication") }} -->
-<!-- 					</a> -->
-<!-- 				</li> -->
-<!-- 			{% endif %} -->
-			{% if config.ulisboaPortal.showAllExecutionCourseFuncs %}
-			{% if executionCourse.site is not empty %}
-				{% if professorship.permissions.announcements %}
-					<li>
-						<!-- NO_CHECKSUM -->
-						<a href="{{contextPath}}/teacher/{{executionCourse.externalId}}/announcements">
-							{{ i18n("resources.ApplicationResources", "link.announcements") }}
-						</a>
-					</li>
-				{% endif %}
-				{% if professorship.permissions.sections %}
-					<li>
-						<!-- NO_CHECKSUM -->
-						<a href="{{contextPath}}/teacher/{{executionCourse.externalId}}/pages">
-							{{ i18n("resources.ApplicationResources", "label.executionCourseManagement.menu.sections") }}
-						</a>
-					</li>
-				{% endif %}
-			{% endif %}
-			{% endif %}
-<!-- 			<li> -->
-<!-- 				<a href="{{contextPath}}{{ injectCheckSumInUrl (contextPath, "/teacher/executionCourseForumManagement.do?method=viewForuns&executionCourseID="+executionCourse.externalId, session ) }}"> -->
-<!-- 					{{ i18n("resources.ApplicationResources", "link.teacher.executionCourseManagement.foruns") }} -->
-<!-- 				</a> -->
-<!-- 			</li> -->
-		</ul>
-{# /COMMUNICATION_MENU #}
-		
-{# COURSE_MANAGEMENT_MENU #}
-		<ul class="nav nav-pills nav-stacked">
-			<li class="navheader">
-				<strong>{{ i18n("resources.ApplicationResources", "label.executionCourseManagement.menu.management") }}</strong>
-			</li>
-			{% if professorship.permissions.students %}
-				<li>
-				<!-- NO_CHECKSUM -->
-                	<a href="{{contextPath}}/teacher/{{executionCourse.externalId}}/attends/show">
-						{{ i18n("resources.ApplicationResources", "link.students") }}
-					</a>
-				</li>
-			{% endif %}
-			{% if professorship.permissions.summaries %}
-				<li>
-					<a href="{{contextPath}}{{ injectCheckSumInUrl (contextPath, "/teacher/summariesManagement.do?method=prepareShowSummaries&executionCourseID="+executionCourse.externalId, session ) }}">
-						{{ i18n("resources.ApplicationResources", "link.summaries") }}
-					</a>
-				</li>
-			{% endif %}
-			<li>
-				<a href="{{contextPath}}{{ injectCheckSumInUrl (contextPath, "/teacher/teachersManagerDA.do?method=viewTeachersByProfessorship&executionCourseID="+executionCourse.externalId, session ) }}">
-					{{ i18n("resources.ApplicationResources", "link.teachers") }}
-				</a>
-			</li>
-
-<!-- 			{% if professorship.permissions.planning %} -->
-<!-- 				<li> -->
-<!-- 					<a href="{{contextPath}}{{ injectCheckSumInUrl (contextPath, "/teacher/manageExecutionCourse.do?method=lessonPlannings&executionCourseID="+executionCourse.externalId, session ) }}"> -->
-<!-- 						{{ i18n("resources.ApplicationResources", "link.lessonPlannings") }} -->
-<!-- 					</a> -->
-<!-- 				</li> -->
-<!-- 			{% endif %} -->
-
-<!-- 				DO NOT REACTIVATE -->
-<!-- 				<li> -->
-<!-- 					<a href="{{contextPath}}{{ injectCheckSumInUrl (contextPath, "/teacher/markSheetManagement.do?method=evaluationIndex&executionCourseID="+executionCourse.externalId, session ) }}"> -->
-<!-- 						{{ i18n("resources.ApplicationResources", "link.evaluation") }} -->
-<!-- 					</a> -->
-<!-- 				</li> -->
-				
-<!-- 			{% if professorship.permissions.groups %} -->
-<!-- 				<li> -->
-<!-- 					NO_CHECKSUM -->
-<!--                 	<a href="{{contextPath}}/teacher/{{executionCourse.externalId}}/student-groups/show"> -->
-<!-- 						{{ i18n("resources.ApplicationResources", "link.groupsManagement") }} -->
-<!-- 					</a> -->
-<!-- 				</li> -->
-<!-- 			{% endif %} -->
-<!-- 			{% if professorship.permissions.shift %} -->
-<!-- 				<li> -->
-<!-- 					<a href="{{contextPath}}{{ injectCheckSumInUrl (contextPath, "/teacher/manageExecutionCourse.do?method=manageShifts&executionCourseID="+executionCourse.externalId, session ) }}"> -->
-<!-- 						{{ i18n("resources.ApplicationResources", "label.shifts") }} -->
-<!-- 					</a> -->
-<!-- 				</li> -->
-<!-- 			{% endif %} -->
-		</ul>
-{# /COURSE_MANAGEMENT_MENU #}
-
-{# CURRICULAR_INFO_MENU #}
-<!-- 		<ul class="nav nav-pills nav-stacked"> -->
-<!-- 			<li class="navheader"> -->
-<!-- 				<strong>{{ i18n("resources.ApplicationResources", "label.executionCourseManagement.menu.curricularInfo") }}</strong> -->
-<!-- 			</li> -->
-<!-- 			<li> -->
-<!-- 				<a href="{{contextPath}}{{ injectCheckSumInUrl (contextPath, "/teacher/manageObjectives.do?method=objectives&executionCourseID="+executionCourse.externalId, session ) }}"> -->
-<!-- 					{{ i18n("resources.ApplicationResources", "link.objectives") }} -->
-<!-- 				</a> -->
-<!-- 			</li> -->
-<!-- 			<li> -->
-<!-- 				<a href="{{contextPath}}{{ injectCheckSumInUrl (contextPath, "/teacher/manageProgram.do?method=program&executionCourseID="+executionCourse.externalId, session ) }}"> -->
-<!-- 					{{ i18n("resources.ApplicationResources", "link.program") }} -->
-<!-- 				</a> -->
-<!-- 			</li> -->
-<!-- 			{% if professorship.permissions.evaluationMethod %} -->
-<!-- 				<li> -->
-<!-- 					<a href="{{contextPath}}{{ injectCheckSumInUrl (contextPath, "/teacher/manageEvaluationMethod.do?method=evaluationMethod&executionCourseID="+executionCourse.externalId, session ) }}"> -->
-<!-- 						{{ i18n("resources.ApplicationResources", "link.evaluationMethod") }} -->
-<!-- 					</a> -->
-<!-- 				</li> -->
-<!-- 			{% endif %} -->
-<!-- 			{% if professorship.permissions.bibliografy %} -->
-<!-- 				<li> -->
-<!-- 					<a href="{{contextPath}}{{ injectCheckSumInUrl (contextPath, "/teacher/manageBibliographicReference.do?method=bibliographicReference&executionCourseID="+executionCourse.externalId, session ) }}"> -->
-<!-- 						{{ i18n("resources.ApplicationResources", "link.bibliography") }} -->
-<!-- 					</a> -->
-<!-- 				</li> -->
-<!-- 			{% endif %} -->
-<!-- 		</ul> -->
-{# /CURRICULAR_INFO_MENU #}
-
-<!-- 			<ul class="nav nav-pills nav-stacked"> -->
-<!-- 				<li class="navheader"> -->
-<!-- 					<strong>{{ i18n("resources.ApplicationResources", "label.executionCourseManagement.menu.curricularUnitsQuality") }}</strong> -->
-<!-- 				</li> -->
-<!-- 				<li> -->
-<!-- 					<a href="{{contextPath}}{{ injectCheckSumInUrl (contextPath, "/teacher/teachingInquiry.do?method=showInquiriesPrePage&executionCourseID="+executionCourse.externalId, session ) }}"> -->
-<!-- 						{{ i18n("resources.ApplicationResources", "link.teachingReportManagement") }} -->
-<!-- 					</a> -->
-<!-- 				</li> -->
-<!-- 				{% if professorship.responsibleFor %} -->
-<!-- 				<li> -->
-<!-- 					<a href="{{contextPath}}{{ injectCheckSumInUrl (contextPath, "/teacher/regentInquiry.do?method=showInquiriesPrePage&executionCourseID="+executionCourse.externalId, session ) }}"> -->
-<!-- 						{{ i18n("resources.ApplicationResources", "link.regentReportManagement") }} -->
-<!-- 					</a> -->
-<!-- 				</li> -->
-<!-- 				{% endif %} -->
-<!-- 			</ul> -->
-
-{# EVALUATIONS_MENU #}
-		{% if config.ulisboaPortal.teacherEvaluationSectionAvailable %}
-		<ul class="nav nav-pills nav-stacked">
-			<li class="navheader">
-				<strong>{{ i18n("resources.ApplicationResources", "link.evaluation") }}</strong>
-			</li>
-			{% if professorship.permissions.evaluationFinal %}
-				<li>
-					<!-- NO_CHECKSUM -->
-                	<a href="{{contextPath}}/fenixedu-ulisboa-specifications/evaluation/managemarksheet/teacher/competencecoursemarksheet/{{executionCourse.externalId}}">
-						{{ i18n("resources.AcademicAdminOffice", "label.navheader.marksSheet") }}
-					</a>
-					
-					{% if config.ulisboaPortal.teacherEvaluationsFunctionality is not empty %}
-                	<a href="{{contextPath}}{{config.ulisboaPortal.teacherEvaluationsFunctionality}}{{executionCourse.externalId}}">
-						{{ i18n("resources.ApplicationResources", "link.view.written.evaluations") }}
-					</a>
-					{% endif %}					
-					
-				</li>
-			{% endif %}
-			{% if professorship.permissions.evaluationSpecific %}
-				{% if config.ulisboaPortal.teacherAdHocEvaluationsAvailable %}
-				<li>
-				    <a href="{{contextPath}}{{ injectCheckSumInUrl (contextPath, "/teacher/evaluation/adHocEvaluationIndex.faces?executionCourseID="+executionCourse.externalId, session ) }}">
-						{{ i18n("resources.ApplicationResources", "link.adHocEvaluations") }}
-					</a>
-				</li>
-				{% endif %}
-			{% endif %}
-<!-- 			{% if professorship.permissions.evaluationProject %} -->
-<!-- 			<li> -->
-<!-- 			    <a href="{{contextPath}}{{ injectCheckSumInUrl (contextPath, "/teacher/evaluation/projectsIndex.faces?executionCourseID="+executionCourse.externalId, session ) }}"> -->
-<!-- 					{{ i18n("resources.ApplicationResources", "link.projects") }} -->
-<!-- 				</a> -->
-<!-- 			</li> -->
-<!-- 			{% endif %} -->
-<!-- 			{% if professorship.permissions.evaluationTests %} -->
-<!-- 			<li> -->
-<!-- 			    <a href="{{contextPath}}{{ injectCheckSumInUrl (contextPath, "/teacher/evaluation/writtenTestsIndex.faces?executionCourseID="+executionCourse.externalId, session ) }}"> -->
-<!-- 					{{ i18n("resources.ApplicationResources", "link.writtenTests") }} -->
-<!-- 				</a> -->
-<!-- 			</li> -->
-<!-- 			{% endif %} -->
-<!-- 			{% if professorship.permissions.evaluationExams %} -->
-<!-- 			<li> -->
-<!-- 			    <a href="{{contextPath}}{{ injectCheckSumInUrl (contextPath, "/teacher/evaluation/examsIndex.faces?executionCourseID="+executionCourse.externalId, session ) }}"> -->
-<!-- 					{{ i18n("resources.ApplicationResources", "link.exams") }} -->
-<!-- 				</a> -->
-<!-- 			</li> -->
-<!-- 			{% endif %} -->
-<!-- 			<li> -->
-<!-- 				<a href="{{contextPath}}{{ injectCheckSumInUrl (contextPath, "/teacher/markSheetManagement.do?method=evaluationIndex&executionCourseID="+executionCourse.externalId, session ) }}"> -->
-<!-- 					{{ i18n("resources.ApplicationResources", "link.evaluation") }} -->
-<!-- 				</a> -->
-<!-- 			</li>			 -->
-		</ul>
-		{% endif %}
-{# /EVALUATIONS_MENU #}
-
-{% lazyFor item in root.userMenuStream %}
-	{% if item.path == "_execution-course-functionalities" %}
-		{% lazyFor subItem in item.userMenuStream %}
-			<ul class="nav nav-pills nav-stacked">
-				{% if subItem.userMenuStream is empty %}
-					<a href="{{contextPath}}{{subItem.fullPath}}?executionCourseID={{executionCourse.externalId}}&executionCourseId={{executionCourse.externalId}}"><li class="navheader"><strong>{{subItem.title.content}}</strong></li></a>
-				{% else %}
-					<li class="navheader"><strong>{{subItem.title.content}}</strong></li>
-					{% lazyFor child in subItem.userMenuStream %}
-						<li><a href="{{contextPath}}{{child.fullPath}}?executionCourseID={{executionCourse.externalId}}&executionCourseId={{executionCourse.externalId}}">{{child.title.content}}</a></li>
-					{% endLazyFor %}
-				{% endif %}
-			</ul>		
-		{% endLazyFor %}
-	{% endif %}
-{% endLazyFor %}
-
-	</div>
-{% endif %}
-</nav>
-{% endblock %}
