@@ -1,3 +1,5 @@
+- Refactor: Removed unused template executionCourseManagmentLayout.html [#qubIT-Omnis-5780]
+
 2.10.2 (09-04-2024)
 - Bug fix: Correcting encoding issues [#UL-REIT-3800]
 
